# solvin

./: .gitignore  .gitmodules
agentic-os/backend/: README.md  pyproject.toml  requirements.txt
agentic-os/backend/modules/: cli_agents.py  cli_errorhandler.py  cli_repos.py  cli_tools.py
agentic-os/backend/modules/cli_core/: __init__.py  core.py.old  patch.py  utils.py
agentic-os/backend/services/agents/: README.md
agentic-os/backend/services/tools/: README.md
agentic-os/backend/shared/: client_agents.py  client_configs.py  client_repos.py  client_tools.py  config.py
agentic-os/backend/solvin/: main.py
agentic/backend/: README.md  pyproject.toml  requirements.txt
agentic/backend/modules/: cli_agents.py  cli_configs.py  cli_core.py  cli_errorhandler.py  cli_tools.py
agentic/backend/old/: solvin
agentic/backend/old/modules.old/: agent_manager.py  cli.py  cli.py.org  config.py  config.py.org  detect_repo.py  detect_repo_gradle.py  git.py  gradle_parser.py  jdk.py  line_tracer.py  llm.py  logs.py  prompts.py  state_manager.py  tools_executor.py  tools_registry.py  tools_replace_function_in_file_java.py  tools_replace_function_in_file_python.py  tools_safety.py  tools_utils.py  turns_duplicates.py  turns_inbound.py  turns_list.py  turns_manager.py  turns_outbound.py  turns_processor.py  turns_purge.py  turns_reject.py  utils.py  (+9 more)
agentic/backend/scripts/: README.md  backend.sh  config.fish  frontend.sh  tests.sh  venv.sh  wipe.sh
agentic/backend/shared/: client_agents.py  client_tools.py  config.py  logger.py  tracer.py
agentic/backend/solvin/: main.py
(+337 files in other folders)
