[project]
name = "solvin"
version = "1.1.0"
description = "Solvin Agentic Operating System CLI - Unified entrypoint for all microservices"
readme = "README.md"
authors = [
  { name = "Yaniv Shemesh", email = "y@solvin.ai" }
]
requires-python = ">=3.12"
dependencies = [
  "typer[all]>=0.15.2",
  "requests>=2.32.3",
  "python-json-logger>=3.3.0",
  "pyyaml>=6.0.2"
]

[project.scripts]
solvin = "solvin.main:app"

[tool.setuptools.packages.find]
include = ["solvin", "modules", "shared"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
